call update phase api, fix break align with quoted in case no status
call update phase api, fix break align with quoted in case no status

--- a/src/projects/detail/components/PhaseCard/EditStageForm.scss
+++ b/src/projects/detail/components/PhaseCard/EditStageForm.scss
@@ -32,14 +32,14 @@
     height: 50px;
 
     .label-title {
-        margin: auto 10px;
-        width: 100px;
-        text-align: right;
-        color: #404041;
-        font-size: 15px;
-        font-weight: 400;
-        line-height: 30px;
-        white-space: nowrap;
+      margin: auto 10px;
+      flex: 0 250px;
+      text-align: right;
+      color: #404041;
+      font-size: 15px;
+      font-weight: 400;
+      line-height: 30px;
+      white-space: nowrap;
     }
     
     .input {
